expense statement and res partner type

--- a/expense_statement/views/account_account_inherited.xml
+++ b/expense_statement/views/account_account_inherited.xml
@@ -43,6 +43,8 @@
                     <field name="is_bank"/>
                     <field name="is_sm"/>
                     <field name="is_other_expense"/>
+                    <field name="statements_branch"/>
+<!--                    <field name="is_head_office"/>-->
                 </xpath>
             </field>
         </record>
