--- a/expense_statement/reports/templates.xml
+++ b/expense_statement/reports/templates.xml
@@ -15,12 +15,12 @@
                 <!--                </div>-->
             </div>
         </div>
-<!--        <div t-attf-class="article o_report_layout_standard o_company_#{res_company.id}_layout" t-att-data-oe-model="doc and doc._name" t-att-data-oe-id="doc and doc.id" t-att-data-oe-lang="doc and doc.env.context.get('lang')">-->
-<!--            <div class="pt-5">-->
-<!--                <t t-call="web.address_layout"/>-->
-<!--            </div>-->
-<!--            <t t-raw="0"/>-->
-<!--        </div>-->
+        <!--        <div t-attf-class="article o_report_layout_standard o_company_#{res_company.id}_layout" t-att-data-oe-model="doc and doc._name" t-att-data-oe-id="doc and doc.id" t-att-data-oe-lang="doc and doc.env.context.get('lang')">-->
+        <!--            <div class="pt-5">-->
+        <!--                <t t-call="web.address_layout"/>-->
+        <!--            </div>-->
+        <!--            <t t-raw="0"/>-->
+        <!--        </div>-->
         <div t-attf-class="footer o_standard_footer o_company_#{res_company.id}_layout"  style="margin-top:15px; padding-top:20px;">
             <div class="text-center" style="border-top: 1px solid black; margin-top:15px; padding-top:15px;">
                 <ul class="list-inline mb4">
@@ -275,9 +275,16 @@
                                     </tr>
 
                                     <tr class="border-black o_total">
-                                        <td><strong>Expense</strong></td>
+                                        <td><strong>Branch Expense</strong></td>
                                         <td class="text-right">
                                             <span class="text-nowrap" t-esc="'('+str(grand_total)+ ')'"/>
+                                        </td>
+                                    </tr>
+
+                                    <tr class="border-black o_total">
+                                        <td><strong>Net Branch Sale</strong></td>
+                                        <td class="text-right">
+                                            <span class="text-nowrap" t-esc="(grand_total_sale- (grand_total_sale_return+ grand_total_purchases))-grand_total"/>
                                         </td>
                                     </tr>
 
@@ -288,19 +295,61 @@
                                         </td>
                                     </tr>
 
-                                    <tr class="border-black o_total">
-                                        <td><strong>Total Expense</strong></td>
-                                        <td class="text-right">
-                                            <span class="text-nowrap" t-esc="'('+str(grand_total+grand_total_other)+ ')'"/>
-                                        </td>
-                                    </tr>
+                                    <!--                                    <tr class="border-black o_total">-->
+                                    <!--                                        <td><strong>Total Expense</strong></td>-->
+                                    <!--                                        <td class="text-right">-->
+                                    <!--                                            <span class="text-nowrap" t-esc="'('+str(grand_total+grand_total_other)+ ')'"/>-->
+                                    <!--                                        </td>-->
+                                    <!--                                    </tr>-->
 
                                     <tr class="border-black o_total">
                                         <td><strong>Net Sale</strong></td>
                                         <td class="text-right">
-                                            <span class="text-nowrap" t-esc="'{0:,.2f}'.format((grand_total_sale- (grand_total_sale_return+ grand_total_purchases))-grand_total)"/>
+                                            <span class="text-nowrap" t-esc="'{0:,.2f}'.format((((grand_total_sale- (grand_total_sale_return + grand_total_purchases))-grand_total))-grand_total_other)"/>
                                         </td>
                                     </tr>
+
+                                    <tr class="border-black o_total">
+                                        <td><strong>Construction(89-FF)</strong></td>
+                                        <td class="text-right">
+                                            <span class="text-nowrap" t-esc="'{0:,.2f}'.format(get_construction_balance())"/>
+                                        </td>
+                                    </tr>
+
+                                    <!--                                    <tr class="border-black o_total">-->
+                                    <!--                                        <td><strong>SM</strong></td>-->
+                                    <!--                                        <td class="text-right">-->
+                                    <!--                                            <span class="text-nowrap" t-esc="get_sm_balance()"/>-->
+                                    <!--                                        </td>-->
+                                    <!--                                    </tr>-->
+
+                                    <t t-set="cash_accounts" t-value="get_cash_account()"/>
+                                    <t t-set="total_cash_accounts" t-value="0"/>
+                                    <t t-foreach="cash_accounts" t-as="cash_account">
+                                        <tr class="border-black o_total">
+                                            <td><strong><span t-esc="cash_account['account_name']"/></strong></td>
+                                            <td class="text-right">
+                                                <span class="text-nowrap" t-esc="'{0:,.2f}'.format(cash_account['amount'])"/>
+                                                <t t-set="total_cash_accounts" t-value="total_cash_accounts + cash_account['amount']"/>
+                                            </td>
+                                        </tr>
+                                    </t>
+
+                                    <tr class="border-black o_total">
+                                        <td><strong>Bank</strong></td>
+                                        <td class="text-right">
+                                            <span class="text-nowrap" t-esc="'{0:,.2f}'.format(get_bank_balance())"/>
+                                        </td>
+                                    </tr>
+
+                                    <tr class="border-black o_total">
+                                        <td><strong>Closing Balance</strong></td>
+                                        <t t-set="closing" t-value="((((((get_open_balance()+grand_total_sale)-grand_total_sale_return)-grand_total_purchases)-get_construction_balance())-get_bank_balance())-total_cash_accounts)-(grand_total+grand_total_other)"/>
+                                        <td class="text-right">
+                                            <span class="text-nowrap" t-esc="'{0:,.2f}'.format(closing)"/>
+                                        </td>
+                                    </tr>
+
 
                                 </table>
                             </div>
@@ -345,12 +394,7 @@
                                         </td>
                                     </tr>
 
-                                    <tr class="border-black o_total">
-                                        <td><strong>Closing Balance</strong></td>
-                                        <td class="text-right">
-                                            <span class="text-nowrap" t-esc="'{0:,.2f}'.format((((get_open_balance()+grand_total_sale)-grand_total_sale_return)-grand_total_purchases)-(grand_total+grand_total_other))"/>
-                                        </td>
-                                    </tr>
+
 
                                 </table>
                                 <p style="font-size:18px;">
