--- a/expense_statement/reports/templates.xml
+++ b/expense_statement/reports/templates.xml
@@ -335,6 +335,14 @@
                                         </tr>
                                     </t>
 
+                                    <t t-set="fp_account_total" t-value="get_fp_account_total()"/>
+                                    <tr class="border-black o_total">
+                                        <td><strong>FP</strong></td>
+                                        <td class="text-right">
+                                            <span class="text-nowrap" t-esc="'{0:,.2f}'.format(fp_account_total)"/>
+                                        </td>
+                                    </tr>
+
                                     <tr class="border-black o_total">
                                         <td><strong>Bank</strong></td>
                                         <td class="text-right">
@@ -344,7 +352,7 @@
 
                                     <tr class="border-black o_total">
                                         <td><strong>Closing Balance</strong></td>
-                                        <t t-set="closing" t-value="((((((get_open_balance()+grand_total_sale)-grand_total_sale_return)-grand_total_purchases)-get_construction_balance())-get_bank_balance())-total_cash_accounts)-(grand_total+grand_total_other)"/>
+                                        <t t-set="closing" t-value="(((((((get_open_balance()+grand_total_sale)-grand_total_sale_return)-grand_total_purchases)-get_construction_balance())-get_bank_balance())-total_cash_accounts)-fp_account_total)-(grand_total+grand_total_other)"/>
                                         <td class="text-right">
                                             <span class="text-nowrap" t-esc="'{0:,.2f}'.format(closing)"/>
                                         </td>
