--- a/expense_statement/reports/templates.xml
+++ b/expense_statement/reports/templates.xml
@@ -301,21 +301,32 @@
                                     <!--                                            <span class="text-nowrap" t-esc="'('+str(grand_total+grand_total_other)+ ')'"/>-->
                                     <!--                                        </td>-->
                                     <!--                                    </tr>-->
-                                    <t t-set="inter_branch" t-value="get_inter_branch_balance()"/>
+
                                     <tr class="border-black o_total">
                                         <td><strong>Net Sale</strong></td>
                                         <td class="text-right">
-                                            <span class="text-nowrap" t-esc="'{0:,.2f}'.format(((((grand_total_sale- (grand_total_sale_return + grand_total_purchases))-grand_total))-grand_total_other)+inter_branch)"/>
+                                            <span class="text-nowrap" t-esc="'{0:,.2f}'.format(((((grand_total_sale- (grand_total_sale_return + grand_total_purchases))-grand_total))-grand_total_other))"/>
                                         </td>
                                     </tr>
 
-                                    <tr class="border-black o_total">
-                                        <td><strong>Inter Branch Cash Receive</strong></td>
-                                        <td class="text-right">
-                                            <span class="text-nowrap" t-esc="'{0:,.2f}'.format(inter_branch)"/>
-                                        </td>
-                                    </tr>
-
+                                    <t t-set="inter_branch_receive" t-value="get_inter_branch_balance()[0]"/>
+                                    <t t-set="inter_branch_paid" t-value="get_inter_branch_balance()[1]"/>
+                                    <t t-if="inter_branch_receive !=0">
+                                        <tr class="border-black o_total">
+                                            <td><strong>Inter Branch Cash Receive</strong></td>
+                                            <td class="text-right">
+                                                <span class="text-nowrap" t-esc="'{0:,.2f}'.format(inter_branch_receive)"/>
+                                            </td>
+                                        </tr>
+                                    </t>
+<!--                                    <t t-if="inter_branch_paid !=0">-->
+<!--                                        <tr class="border-black o_total">-->
+<!--                                            <td><strong>Inter Branch Cash Paid</strong></td>-->
+<!--                                            <td class="text-right">-->
+<!--                                                <span class="text-nowrap" t-esc="'{0:,.2f}'.format(inter_branch_paid)"/>-->
+<!--                                            </td>-->
+<!--                                        </tr>-->
+<!--                                    </t>-->
                                     <tr class="border-black o_total">
                                         <td><strong>Construction(89-FF)</strong></td>
                                         <td class="text-right">
@@ -359,12 +370,11 @@
 
                                     <tr class="border-black o_total">
                                         <td><strong>Closing Balance</strong></td>
-                                        <t t-set="closing" t-value="(((((((get_open_balance()+grand_total_sale)-grand_total_sale_return)-grand_total_purchases)-get_construction_balance())-get_bank_balance())-total_cash_accounts)-fp_account_total)-(grand_total+grand_total_other)"/>
+                                        <t t-set="closing" t-value="((((((((get_open_balance()+grand_total_sale)-grand_total_sale_return)-grand_total_purchases)-get_construction_balance())-get_bank_balance())-total_cash_accounts)-fp_account_total)+inter_branch_receive)-(grand_total+grand_total_other)"/>
                                         <td class="text-right">
                                             <span class="text-nowrap" t-esc="'{0:,.2f}'.format(closing)"/>
                                         </td>
                                     </tr>
-
 
                                 </table>
                             </div>
