--- a/expense_statement/reports/templates.xml
+++ b/expense_statement/reports/templates.xml
@@ -481,12 +481,10 @@
                                 </t>
                             </t>
 
-                            <!--                        <t t-foreach="other_expense_accounts" t-as="other_account">-->
-                            <!--                            <t t-set="account_total" t-value="get_cashin_expense_account(other_account)"/>-->
-                            <!--                            <t t-if="account_total != 0.0">-->
-                            <!--                                <th class="text-center" t-esc="other_account.secondary_name" style="border:1px solid black;"/>-->
-                            <!--                            </t>-->
-                            <!--                        </t>-->
+                            <t t-foreach="cashin_payable_accounts()" t-as="cashin_account_payables">
+                                <th class="text-center" t-esc="cashin_account_payables['partner_name']" style="border:1px solid black;"/>
+
+                            </t>
                             <th style="border:1px solid black;" class="text-center">Total.EXP</th>
 
                             <t t-foreach="get_headoffice_dates()" t-as="date">
@@ -511,6 +509,16 @@
                                         </t>
                                     </t>
 
+                                    <t t-foreach="cashin_payable_accounts()" t-as="cashin_account_payables">
+                                        <t t-set="partner_pay" t-value="cashin_payable_partner(date, cashin_account_payables['partner_id'])"/>
+                                         <t t-set="grand_total_date" t-value="grand_total_date + partner_pay"/>
+                                        <t t-set="grand_total" t-value="grand_total + partner_pay"/>
+
+                                        <td class="text-center" style="border:1px solid black;">
+                                            <span t-esc="'{0:,.0f}'.format(float(partner_pay))"/>
+                                        </td>
+                                    </t>
+
                                     <td class="text-center" style="border:1px solid black;">
                                         <span t-esc="'{0:,.0f}'.format(grand_total_date)"/>
                                     </td>
@@ -526,6 +534,13 @@
                                         </td>
                                     </t>
                                 </t>
+                                <t t-foreach="cashin_payable_accounts()" t-as="cashin_account_payables">
+                                        <t t-set="partner_pay_total" t-value="cashin_payable_partner_total(cashin_account_payables['partner_id'])"/>
+<!--                                         <t t-set="grand_total_date" t-value="grand_total_date + partner_pay"/>-->
+                                        <td class="text-center" style="border:1px solid black;">
+                                            <strong>  <span t-esc="'{0:,.0f}'.format(float(partner_pay_total))"/></strong>
+                                        </td>
+                                    </t>
                                 <!--                            <td><strong> <span t-esc="'{0:,.0f}'.format(float(grand_total))"/></strong></td>-->
                                 <!--                            <t t-foreach="other_expense_accounts" t-as="other_acc">-->
                                 <!--                                <t t-set="account_other_total" t-value="get_account_total(other_acc)"/>-->
@@ -556,14 +571,14 @@
                                         <t t-foreach="cashin_accounts()" t-as="cashin_account">
                                             <t t-set="total_cashin_accounts" t-value="total_cashin_accounts + cashin_account['amount']"/>
                                         </t>
-                                        <t t-if="total_cashin_accounts!=0">
-                                            <tr class="border-black o_subtotal" style="">
-                                                <td style="font-size:20px;"><strong>Cash In</strong></td>
-                                                <td class="text-right" style="font-size:20px;">
-                                                    <span t-esc="'{0:,.2f}'.format(total_cashin_accounts)"/>
-                                                </td>
-                                            </tr>
-                                        </t>
+                                        <!--                                        <t t-if="total_cashin_accounts!=0">-->
+                                        <!--                                            <tr class="border-black o_subtotal" style="">-->
+                                        <!--                                                <td style="font-size:20px;"><strong>Cash In</strong></td>-->
+                                        <!--                                                <td class="text-right" style="font-size:20px;">-->
+                                        <!--                                                    <span t-esc="'{0:,.2f}'.format(total_cashin_accounts)"/>-->
+                                        <!--                                                </td>-->
+                                        <!--                                            </tr>-->
+                                        <!--                                        </t>-->
 
                                         <t t-foreach="cashin_accounts()" t-as="cashin_account_line">
                                             <tr class="border-black o_total">
@@ -581,15 +596,15 @@
                                             </td>
                                         </tr>
 
-                                        <t t-foreach="cashin_payable_accounts()" t-as="cashin_account_payables">
-                                            <tr class="border-black o_total">
-                                                <td style="font-size:20px;"><strong><span t-esc="cashin_account_payables['partner_name']"/></strong></td>
-                                                <td class="text-right" style="font-size:20px;">
-                                                    <span class="text-nowrap" t-esc="'{0:,.2f}'.format(cashin_account_payables['amount'])"/>
-                                                    <!--                                                    <t t-set="total_clearing_accounts" t-value="total_clearing_accounts + clearing_account['amount']"/>-->
-                                                </td>
-                                            </tr>
-                                        </t>
+<!--                                        <t t-foreach="cashin_payable_accounts()" t-as="cashin_account_payables">-->
+<!--                                            <tr class="border-black o_total">-->
+<!--                                                <td style="font-size:20px;"><strong><span t-esc="cashin_account_payables['partner_name']"/></strong></td>-->
+<!--                                                <td class="text-right" style="font-size:20px;">-->
+<!--                                                    <span class="text-nowrap" t-esc="'{0:,.2f}'.format(cashin_account_payables['amount'])"/>-->
+<!--                                                    &lt;!&ndash;                                                    <t t-set="total_clearing_accounts" t-value="total_clearing_accounts + clearing_account['amount']"/>&ndash;&gt;-->
+<!--                                                </td>-->
+<!--                                            </tr>-->
+<!--                                        </t>-->
 
                                         <tr class="border-black o_subtotal" style="">
                                             <td style="font-size:20px;"><strong>Closing Cash</strong></td>
@@ -644,7 +659,7 @@
                                         <t t-if="account_total != 0.0">
 
                                             <t t-set="total" t-value="get_cashin_expense_accounts_raiwaind_date(date, account)"/>
-<!--                                            <t t-set="total" t-value="get_cashin_expense_account_date(date, account)"/>-->
+                                            <!--                                            <t t-set="total" t-value="get_cashin_expense_account_date(date, account)"/>-->
 
                                             <t t-set="grand_total_date" t-value="grand_total_date + total"/>
                                             <t t-set="grand_total" t-value="grand_total + total"/>
@@ -700,14 +715,14 @@
                                         <t t-foreach="cashin_accounts_raiwind()" t-as="cashin_account_raiwind">
                                             <t t-set="total_cashin_accounts_raiwind" t-value="total_cashin_accounts_raiwind + cashin_account_raiwind['amount']"/>
                                         </t>
-                                        <t t-if="total_cashin_accounts!=0">
-                                            <tr class="border-black o_subtotal" style="">
-                                                <td style="font-size:20px;"><strong>Cash In</strong></td>
-                                                <td class="text-right" style="font-size:20px;">
-                                                    <span t-esc="'{0:,.2f}'.format(total_cashin_accounts_raiwind)"/>
-                                                </td>
-                                            </tr>
-                                        </t>
+<!--                                        <t t-if="total_cashin_accounts!=0">-->
+<!--                                            <tr class="border-black o_subtotal" style="">-->
+<!--                                                <td style="font-size:20px;"><strong>Cash In</strong></td>-->
+<!--                                                <td class="text-right" style="font-size:20px;">-->
+<!--                                                    <span t-esc="'{0:,.2f}'.format(total_cashin_accounts_raiwind)"/>-->
+<!--                                                </td>-->
+<!--                                            </tr>-->
+<!--                                        </t>-->
 
                                         <t t-foreach="cashin_accounts_raiwind()" t-as="cashin_account_raiwind_line">
                                             <tr class="border-black o_total">
@@ -725,15 +740,15 @@
                                             </td>
                                         </tr>
 
-<!--                                        <t t-foreach="cashin_payable_accounts()" t-as="cashin_account_payables">-->
-<!--                                            <tr class="border-black o_total">-->
-<!--                                                <td style="font-size:20px;"><strong><span t-esc="cashin_account_payables['partner_name']"/></strong></td>-->
-<!--                                                <td class="text-right" style="font-size:20px;">-->
-<!--                                                    <span class="text-nowrap" t-esc="'{0:,.2f}'.format(cashin_account_payables['amount'])"/>-->
-<!--                                                    &lt;!&ndash;                                                    <t t-set="total_clearing_accounts" t-value="total_clearing_accounts + clearing_account['amount']"/>&ndash;&gt;-->
-<!--                                                </td>-->
-<!--                                            </tr>-->
-<!--                                        </t>-->
+                                        <!--                                        <t t-foreach="cashin_payable_accounts()" t-as="cashin_account_payables">-->
+                                        <!--                                            <tr class="border-black o_total">-->
+                                        <!--                                                <td style="font-size:20px;"><strong><span t-esc="cashin_account_payables['partner_name']"/></strong></td>-->
+                                        <!--                                                <td class="text-right" style="font-size:20px;">-->
+                                        <!--                                                    <span class="text-nowrap" t-esc="'{0:,.2f}'.format(cashin_account_payables['amount'])"/>-->
+                                        <!--                                                    &lt;!&ndash;                                                    <t t-set="total_clearing_accounts" t-value="total_clearing_accounts + clearing_account['amount']"/>&ndash;&gt;-->
+                                        <!--                                                </td>-->
+                                        <!--                                            </tr>-->
+                                        <!--                                        </t>-->
 
                                         <tr class="border-black o_subtotal" style="">
                                             <td style="font-size:20px;"><strong>Closing Cash</strong></td>
