--- a/payslip_partner/views/views.xml
+++ b/payslip_partner/views/views.xml
@@ -10,6 +10,17 @@
 <!--      <field name="code"> if records: records.create_update_jv() </field>-->
 <!--    </record>-->
 
+       <record id="view_hr_employee_form_part_inh" model="ir.ui.view">
+        <field name="name">hr.employee.form.inh</field>
+        <field name="model">hr.employee</field>
+        <field name="inherit_id" ref="smc_overall.view_hr_employee_form_inh"/>
+        <field name="arch" type="xml">
+            <xpath expr="//field[@name='partner_ids']" position="attributes">
+                <attribute name="readonly">1</attribute>
+            </xpath>
+        </field>
+    </record>
+
 
      <record id="view_payslip_move_form_inherit_branch" model="ir.ui.view">
             <field name="name">view.account.move.form.inherit.branch</field>
