--- a/smc_overall/views/product_views.xml
+++ b/smc_overall/views/product_views.xml
@@ -17,8 +17,9 @@
             <field name="model">stock.quant</field>
             <field name="inherit_id" ref="stock.view_stock_quant_tree_editable"/>
             <field name="arch" type="xml">
+
                 <xpath expr="//field[@name='available_quantity']" position="after">
-                    <field name="valuation_salesprice" sum="Total"/>
+                    <field name="valuation_salesprice" sum="Total" groups="smc_overall.group_show_cost_price"/>
                 </xpath>
 
             </field>
