--- a/smc_overall/views/sale_views.xml
+++ b/smc_overall/views/sale_views.xml
@@ -46,10 +46,15 @@
                 <field name="partner_balance" />
                 <field name="quo_date"/>
             </xpath>
+
+            <xpath expr="//field[@name='order_line']//tree/field[@name='price_unit']" position="attributes">
+                <attribute name="readonly">1</attribute>
+            </xpath>
+
         </field>
     </record>
 
-     <record model="ir.ui.view" id="purchase_order_form_inh">
+    <record model="ir.ui.view" id="purchase_order_form_inh">
         <field name="name">purchase.order.form.inh</field>
         <field name="model">purchase.order</field>
         <field name="inherit_id" ref="purchase.purchase_order_form"/>
